cmake_minimum_required(VERSION 3.27)
project(Learning C)

set(CMAKE_C_STANDARD 11)

add_subdirectory("${PROJECT_SOURCE_DIR}/SquaresOfSortedArray" "${PROJECT_SOURCE_DIR}/SquaresOfSortedArray/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/TwoSums" "${PROJECT_SOURCE_DIR}/TwoSums/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/AddTwoNumbers" "${PROJECT_SOURCE_DIR}/AddTwoNumbers/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio16" "${PROJECT_SOURCE_DIR}/Ejercicio16/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio13" "${PROJECT_SOURCE_DIR}/Ejercicio13/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio17" "${PROJECT_SOURCE_DIR}/Ejercicio17/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio14" "${PROJECT_SOURCE_DIR}/Ejercicio14/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Libro" "${PROJECT_SOURCE_DIR}/Libro/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/LongestSubstringWoutRepChar" "${PROJECT_SOURCE_DIR}/LongestSubstringWoutRepChar/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/LastStoneWeight" "${PROJECT_SOURCE_DIR}/LastStoneWeight/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio19" "${PROJECT_SOURCE_DIR}/Ejercicio19/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/Ejercicio20" "${PROJECT_SOURCE_DIR}/Ejercicio20/Output")
add_subdirectory("${PROJECT_SOURCE_DIR}/ProductOfArrayExceptSelf" "${PROJECT_SOURCE_DIR}/ProductOfArrayExceptSelf/Output")